<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <EditText
            android:id="@+id/firstName_reg"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:hint="@string/FirstName"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText

            android:id="@+id/lastName_reg"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="30dp"
            android:hint="@string/LastName"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/address_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="100dp"
            android:hint="@string/Address"
            android:inputType="number"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/securityCode_reg"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="85dp"
            android:layout_marginTop="160dp"
            android:hint="@string/SecurityCode"
            android:inputType="numberPassword"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="230dp"
            android:hint="@string/EmailAddress"
            android:inputType="textEmailAddress"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/username_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="290dp"
            android:hint="@string/Username"
            android:inputType="text"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/pass_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="350dp"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/passConf_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="420dp"
            android:hint="@string/ConfirmPassword"
            android:inputType="textPassword"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="20dp"
            android:textStyle="bold" />



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="215dp"
            android:layout_marginTop="500dp"
            android:onClick="Register"
            android:padding="15dp"
            android:textStyle="bold"
            android:background="@drawable/shape"
            android:textColor="@color/colorPrimary"
            android:text="@string/Register"

            android:textSize="20dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="65dp"
            android:layout_marginTop="500dp"
            android:padding="15dp"
            android:textStyle="bold"
            android:background="@drawable/shape"
            android:textColor="@color/colorPrimary"
            android:text="@string/Login"
            android:onClick="toLogin"
            android:textSize="20dp" />
    </RelativeLayout>
</ScrollView>