<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:background="@color/cardview_light_background"
    tools:context=".LoginActivity"
    >

    <ImageView
        android:layout_marginBottom="400dp"
        android:layout_width="700dp"
        android:layout_marginTop="0dp"

        android:layout_marginLeft="0dp"
        android:layout_height="800dp"
        android:src="@drawable/logo"/>



    <EditText
        android:id="@+id/username_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="300dp"
        android:hint="@string/EnterUsername"
        android:inputType="textEmailAddress"
        android:text=""

        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="20dp"

        android:textStyle="bold" />

    <EditText

        android:id="@+id/password_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="400dp"
        android:hint="@string/EnterPassword"
        android:inputType="textPassword"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="210dp"
        android:layout_marginTop="500dp"

        android:padding="15dp"
        android:text="@string/Login"
        android:onClick="toProfile"
        android:background="@drawable/shape"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        android:textStyle="bold"
        android:bottomRightRadius="100dp"
        android:bottomLeftRadius="100dp"
        android:topLeftRadius="100dp"
        android:topRightRadius="100dp"

        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="500dp"

        android:padding="15dp"
        android:text="@string/Register"
        android:background="@drawable/shape"
        android:textColor="@color/colorPrimary"
        android:onClick="toRegister"
        android:textSize="20dp"
        android:textStyle="bold" />


</RelativeLayout>